<resources>
    <string name="app_name">Mobile LN</string>
    <string name="notification_channel_id">Mobile LN</string>
    <string name="title_home">Receive</string>
    <string name="title_dashboard">Wallet</string>
    <string name="title_notifications">Send</string>

    <string name="text_node_status_unkonwn">Unknown</string>
    <string name="text_node_status_disconnected">Disconnected</string>
    <string name="text_node_status_connecting_bitcoin">Connecting Bitcoin…</string>
    <string name="text_node_status_fast_sync_bitcoin">Fast downloading blocks…</string>
    <string name="text_node_status_syncing_bitcoin">Syncing Bitcoin…</string>
    <string name="text_node_status_starting_lightning">Connecting Lightning…</string>
    <string name="text_node_status_disconnecting">Disconnecting</string>
    <string name="text_node_status_online">Online</string>
    <string name="text_node_status_title">Mobile LN status</string>
    <string name="dialog_question_ln_service_title">Mobile LN</string>
    <string name="dialog_question_setup_config">You haven\'t setup node config yet, do you want to use default config?</string>
    <string name="dialog_question_ln_service_turn_on">Do you want to turn on LN service? LN service will be running in background and sync all data.</string>
    <string name="dialog_question_ln_service_shutdown">Do you want to shutdown LN service? LN service will be stopped and no longer funds until you turn it back on.</string>
    <string name="dialog_question_yes">Yes</string>
    <string name="dialog_question_no">No</string>
    <string name="wallet_balance_title">My Balance</string>
    <string name="wallet_deposit_address_title">Deposit address</string>
    <string name="pay_amount">Amount</string>
    <string name="pay_description">Description</string>
    <string name="withdraw_btc_address">Withdraw BTC address</string>
    <string name="btc_wallet_balance">Bitcoin wallet balance</string>
    <string name="withdraw_btc_amount">Amount (sat) or \'all\'</string>
    <string name="my_node_address">My node address</string>
    <string name="create_channel_peer_address">Peer address</string>
    <string name="create_channel_amount_sat">Fund amount (SAT) (It\'s still your money!)</string>
    <string name="create_channel_btn">Create channel</string>
    <string name="node_service_title">Mobile LN service is running</string>
    <string name="node_service_content_text">Tap to open Mobile LN</string>
    <string name="wallet">Wallet</string>
</resources>
