<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
              android:layout_height="wrap_content" android:layout_gravity="center"
              android:gravity="center" android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_channel_peer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_channel_peer_address"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_channel_amount_sat"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_channel_amount_sat"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.button.MaterialButton
        android:id="@+id/create_channel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_channel_btn"
    />
</android.support.v7.widget.LinearLayoutCompat>