<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textSize="24sp" android:textStyle="bold"
                      android:layout_marginTop="25dp"
                      android:layout_marginStart="15dp"
                      android:text="@string/btc_wallet_balance"/>

            <android.support.v7.widget.AppCompatTextView android:id="@+id/btc_wallet_balance_textview"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:gravity="center"
                                                         android:layout_marginTop="30dp"
                                                         android:layout_marginBottom="30dp"
                                                         android:textStyle="bold"
                                                         android:text="12345 BTC"
                                                         android:textSize="42sp"/>
            <android.support.design.button.MaterialButton
                android:id="@+id/receive_test_coin_from_faucet_button"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:text="Get testnet free coins !!!"
                android:layout_marginBottom="30dp" android:gravity="center"
                android:maxLines="1"
                android:minWidth="200dp"
            />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textSize="24sp" android:textStyle="bold"
                      android:layout_marginTop="25dp"
                      android:layout_marginStart="15dp"
                      android:text="@string/wallet_deposit_address_title"/>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/receive_payment_bitcoin_imageview"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/receive_my_btc_address_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp" android:gravity="center"
                android:textSize="10dp"
                android:maxLines="6"
                android:minWidth="200dp"
            />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textSize="24sp" android:textStyle="bold"
                      android:layout_marginTop="25dp"
                      android:layout_marginStart="15dp"
                      android:text="Withdrawal"/>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp">
                <ImageView android:id="@+id/btc_withdrawal_camera_btn" android:layout_width="30dp"
                           android:layout_height="30dp"
                           android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"
                           android:src="@drawable/camera_icon"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/btc_withdrawal_camera_btn">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/btc_withdrawal_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/withdraw_btc_address"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/btc_withdrawal_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/withdraw_btc_amount"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton android:id="@+id/btc_withdrawal_button"
                                                          android:layout_width="wrap_content"
                                                          android:layout_height="wrap_content"
                                                          android:layout_gravity="center"
                                                          android:layout_marginBottom="30dp"
                                                          android:gravity="center"
                                                          android:maxLines="1"
                                                          android:minWidth="200dp"
                                                          android:text="Withdraw"
            />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>